Mais traduções do português para inglês
Tentei mas de qualquer jeito tá ai

--- a/en-us.yml
+++ b/en-us.yml
@@ -1,7 +1,50 @@
 # Loritta's English Translation
 # Authors:
 # MrPowerGamerBR (https://mrpowergamerbr.com/)
+#ItsGabii
+discord:
+  permissions:
+    kick-members: "Kick members"
+    ban-members: "Ban members"
+    administrator: "Administrador"
+    manage-channel: "Manage channel"
+    manage-server: "Manage server"
+    add-reactions: "Add reacions"
+    message-history: "See message history"
+    view-audit-logs: "See Audit Logs"
+    message-read: "Read messages"
+    message-write: "Send messages"
+    message-manage: "Manage messages"
+    message-ext-emoji: "Use external emojis"
+    message-embed-links: "insert links"
+    manage-roles: "Manage roles"
+    manage-permissions: "Manage permissions"
+    manage-webhooks: "Manage Webhooks"
+    manage-emotes: "Manage emojis"
+    create-instant-invite: "Create an instant invite"
 commands:
+please-wait-cooldown: "Calm down! you need to wait more **{0}** before execute another command! {1}"
+  error-while-executing-command: "Something gone extremaly wrong in executing this command... 😭 Sorry for the inconvenience. 😢"
+  cant-use-in-private: "You can't use this command in private messages!"
+  user-does-not-exists: "This user doesn't exist!"
+  doesnt-have-permission-discord: "Você não tem permissão para usar este comando! Para utilizá-lo, você precisa ter permissão para {0}!"
+  lori-doesnt-have-permission-discord: "I wish I could execute this command, but unfortunately i don't have permission to {0}... {1} Ask for an administrator give this permission for me! Thanks! {2}"
+  command-only-for-owner: "Only special people can use this command :3"
+  arguments:
+    text: "text"
+    number: "number"
+    user: "user"
+    image: "image"
+  language:
+    description: "You know that I can speak in another languages? {0} Change the language that I speak in your server!"
+    please-select-your-language: "Choose the wished language!"
+    translated-by: "Translated by"
+    language-changed: "Ready, now I'am going to speak {0} in this server!"
+  ajuda:
+    error-while-opening-dm: "I wanted to send the Help to you,but how I am supossed to send if you disabled your private messages between people of servers that you know. http://i.imgur.com/Z1HwW2j.png 🤷"
+  roll:
+    description: "Rolls a dice and tells the result, perfect to when you want to play Monopoly but you lost your dice."
+    how-much-sides: "How many sides the dice I will roll have"
   vieirinha:
     description: "Vieirinha is the oracle that knows everything that you want about this life, why not ask something to him?"
     examples:
@@ -34,3 +77,41 @@ commands:
     - "Yes!"
     - "No!"
     - "¯\\_(ツ)_/¯"
+    vemdezap:
+    description: "Good morning catilangaiada! Come from zap baby, use the power of zapzap in your message to show how 🔝 with the Whatsapp's girls!"
+    examples:
+    - "come from zap baby"
+    - "Hi catilangaiada, nobody says nothing kkkkkkkkkkkk"
+    - "zapzap is better than discord! There we have the number phone of girls"
+  actions:
+    examples:
+    - "297153970613387264"
+    - "@MrPowerGamerBR"
+    slap:
+      description: "Use this command for someone that is deserving to receive some slaps"
+      response: "**{0} give a slap in {1}!**"
+      response-anti-idiot: "**How you can sleep in night after try to slap a girl like me? **{0} give a slap in {1}!"
+    kiss:
+      description: "Use this command for kiss someone"
+      response: "**{0} kissed {1}!**"
+      response-anti-idiot: "Nah, I don't want to kiss you... but I still like you like a friend!"
+    attack:
+      description: "Use this command for attack someone"
+      response: "**{0} attacked {1}!**"
+      response-anti-idiot: "**How you dare do this to me? **{0} attacked {1}!"
+    hug:
+      description: "Use this command for give a sweet hug in someone"
+      response: "**{0} hugged {1}!**"
+    dance:
+      description: "Use this command to dance with someone"
+      response: "**{0} danced with {1}!**"
+  # MISCELÂNEA
+  fanarts:
+    description: "Check out the {0} awesome {1} fan arts people made for me!"
+    made-by: "Fan Art made by {0}"
+    thank-you-all: "thank for everybody that made grat and awesome fan arts me!"
+  add-emoji:
+    description: "Add emojis in your server with the link of the emoji. Perfect when you're tired of downloading images in your computer just for add in the server!"
+    success: "Emoji added with sucess!"
+    limit-reached: "The max of emojis (50 emojis) was alredy reached!"
+    error: "I didn't could add this emoji! Sorry for the inconvenience. :sob:"
