Melhorando a tradução para o inglês.

--- a/en-us.yml
+++ b/en-us.yml
@@ -3,7 +3,7 @@
 # MrPowerGamerBR (https://mrpowergamerbr.com/)
 commands:
   vieirinha:
-    description: "Vieirinha is the oracle that knows everything that you want about this life, why not ask something to him?"
+    description: "Vieirinha is the oracle that knows everything you'd like to know about this life, why not ask him something?"
     examples:
     - "Do you love me?"
     - "Sonic is better than Mario?"
@@ -16,13 +16,13 @@ commands:
     - "No."
     - "Yes."
     - "I would say, but I don't want to hurt your feelings."
-    - "Probably yes"
-    - "Probably not"
-    - "My sources says yes"
-    - "My sources says no"
-    - "You can believe in that"
-    - "My answer is no"
-    - "My answer is yes"
+    - "Probably yes."
+    - "Probably not."
+    - "My sources says yes."
+    - "My sources says no."
+    - "You can believe in that."
+    - "My answer is no."
+    - "My answer is yes."
     - "As far as I know, no."
     - "It wouldn't be good to tell you that right now..."
     - "Yes, of course!"
